@@ -1,6 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE jboss PUBLIC 
-	"-//JBoss//DTD JBOSS 3.2//EN" 
-	"http://www.jboss.org/j2ee/dtd/jboss_3_2.dtd">
+<!DOCTYPE jboss PUBLIC
+      "-//JBoss//DTD JBOSS 3.2//EN"
+      "http://www.jboss.org/j2ee/dtd/jboss_3_2.dtd">
+      
+      
+<jboss>
 
+	<enterprise-beans>
+		
+		<entity>
+			<ejb-name>User</ejb-name>
+			<local-jndi-name>jmws/entity/User</local-jndi-name>
+		</entity>
+		
+	</enterprise-beans>
+
+</jboss>
 	
